source/objects/Bluescape_Demo__c/Bluescape_Demo__c.object-meta.xml
<CustomObject>
    <description>External Bluescape Events, including Demo Installation requests</description>
    <label>Bluescape Demo</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bluescape Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>