source/objects/Bluescape_Demo__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date/time the event was approved</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>