source/objects/Bluescape_Demo__c/fields/BS_Demo_Name__c.field-meta.xml
<CustomField>
    <fullName>BS_Demo_Name__c</fullName>
    <formula>if(
 ISBLANK(Org_ID__c),
 Opportunity__r.Name,
 Opportunity__r.Name + &#39;/Demo &#39; + Org_ID__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BS Demo Name</label>
    <type>Text</type>
</CustomField>