source/objects/Bluescape_Demo__c/fields/Created_Admin_User_For_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Created_Admin_User_For_Primary_Contact__c</fullName>
    <label>Admin User For Primary Contact Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>