source/objects/Bluescape_Demo__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Bluescape_Events</relationshipName>
    <type>Lookup</type>
</CustomField>