source/objects/Bluescape_Demo__c/fields/Demo_Duration__c.field-meta.xml
<CustomField>
    <fullName>Demo_Duration__c</fullName>
    <label>Demo Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
                <label>7 days</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 days</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 days</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>