source/objects/Bluescape_Demo__c/fields/Demo_Name__c.field-meta.xml
<CustomField>
    <fullName>Demo_Name__c</fullName>
    <label>Demo Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>