source/objects/Bluescape_Demo__c/fields/Demo_Unit__c.field-meta.xml
<CustomField>
    <fullName>Demo_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Demo unit that will be shipped to prospect</description>
    <label>Demo Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Demo_Unit__c.Functioning__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Demo_Unit__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>