source/objects/Bluescape_Demo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Event Details and Description</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>