source/objects/Bluescape_Demo__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date and time of the event</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>