source/objects/Bluescape_Demo__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>