source/objects/Bluescape_Demo__c/fields/Extension_Duration__c.field-meta.xml
<CustomField>
    <fullName>Extension_Duration__c</fullName>
    <label>Extension Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Extension_Duration</valueSetName>
    </valueSet>
</CustomField>