source/objects/Bluescape_Demo__c/fields/Financial_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Financial_Responsibility__c</fullName>
    <description>Party responsible for paying the shipping costs</description>
    <label>Financial Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bluescape</fullName>
                <color>#0B6FCE</color>
                <label>Bluescape</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <color>#78C953</color>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Haworth</fullName>
                <color>#E27001</color>
                <label>Haworth</label>
            </value>
            <value>
                <fullName>Partner</fullName>
                <color>#A845DC</color>
                <label>Partner</label>
            </value>
            <value>
                <fullName>Split (add details in Notes)</fullName>
                <color>#F3D904</color>
                <label>Split (add details in Notes)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>