source/objects/Bluescape_Demo__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>Date when the demo unit will be installed</description>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>