source/objects/Bluescape_Demo__c/fields/Installer_Cost__c.field-meta.xml
<CustomField>
    <fullName>Installer_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Separate cost of installing the demo unit</description>
    <label>Installer Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>