source/objects/Bluescape_Demo__c/fields/Large_Format_Display__c.field-meta.xml
<CustomField>
    <fullName>Large_Format_Display__c</fullName>
    <description>What type of Bluescape Wall should be installed</description>
    <label>Large Format Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MultiTaction</fullName>
            </value>
            <value>
                <fullName>Planar</fullName>
            </value>
            <value>
                <fullName>Optika</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ricoh</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Avocor</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>