source/objects/Bluescape_Demo__c/fields/Launch_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Call_Date__c</fullName>
    <description>Date for the launch call</description>
    <label>Launch Call Date</label>
    <type>Date</type>
</CustomField>