source/objects/Bluescape_Demo__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity associated with this demo installation request</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>