source/objects/Bluescape_Demo__c/fields/Org_Created__c.field-meta.xml
<CustomField>
    <fullName>Org_Created__c</fullName>
    <label>Org Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bluescape_Integration_Status</valueSetName>
    </valueSet>
</CustomField>