source/objects/Bluescape_Demo__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <label>Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>