source/objects/Bluescape_Demo__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who to contact for scheduling shipping, installation and removal of the demo unit</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>