source/objects/Bluescape_Demo__c/fields/Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Removal_Date__c</fullName>
    <description>Date the demo unit will be removed</description>
    <label>Removal Date</label>
    <type>Date</type>
</CustomField>