source/objects/Bluescape_Demo__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Who is requesting the demo unit</description>
    <label>Requester</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>