source/objects/Bluescape_Demo__c/fields/SE__c.field-meta.xml
<CustomField>
    <fullName>SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Engineer</description>
    <label>SE</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Bluescape_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>