source/objects/Bluescape_Demo__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Where the demo unit is shipped to</description>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>