source/objects/Bluescape_Demo__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <description>Date the demo unit will be shipped by</description>
    <label>Shipping Date</label>
    <type>Date</type>
</CustomField>