source/objects/Bluescape_Demo__c/fields/Shipping_Details__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Details__c</fullName>
    <description>Add an explanation of the shipping costs here.</description>
    <label>Shipping Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>