source/objects/Bluescape_Demo__c/fields/Submit_for_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval_Date__c</fullName>
    <label>Submit for Approval Date</label>
    <type>DateTime</type>
</CustomField>