source/objects/Bluescape_Demo__c/fields/Trial_Extended__c.field-meta.xml
<CustomField>
    <fullName>Trial_Extended__c</fullName>
    <label>Trial Extended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trial_Extended</valueSetName>
    </valueSet>
</CustomField>