source/objects/Bluescape_Demo__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Prospect Demo</fullName>
            </value>
            <value>
                <fullName>Strategic Demo</fullName>
            </value>
            <value>
                <fullName>Partner Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>