source/objects/Bluescape_Demo__c/fields/Wall_Type__c.field-meta.xml
<CustomField>
    <fullName>Wall_Type__c</fullName>
    <description>What type of Bluescape Wall should be installed</description>
    <label>Wall Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>MultiTaction</fullName>
            </value>
            <value>
                <fullName>Optika</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>