source/objects/Bluescape_Demo__c/validationRules/Install_Date_prior_to_Removal_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Install_Date_prior_to_Removal_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Install_Date__c &gt;  Removal_Date__c</errorConditionFormula>
    <errorDisplayField>Install_Date__c</errorDisplayField>
    <errorMessage>Install date has to come before the removal date</errorMessage>
</ValidationRule>