source/objects/Bluescape_Demo__c/validationRules/Ready_For_Approval_Minimum_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Ready_For_Approval_Minimum_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&quot;Ready For Approval&quot;) &amp;&amp; ( ISNULL( Shipping_Cost__c ) || ISNULL( Demo_Unit__c ) || ISNULL(  Install_Date__c ) || ISNULL(  Shipping_Date__c ) || ISNULL(  Removal_Date__c ) || ISNULL( Shipping_Address__c ) || ISNULL(  Primary_Contact__c ) || ISPICKVAL(Financial_Responsibility__c,&quot;&quot; ))</errorConditionFormula>
    <errorMessage>Can&#39;t go for approval with missing fields</errorMessage>
</ValidationRule>