source/objects/Bluescape_Demo__c/validationRules/Shipping_Date_prior_to_Install_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Date_prior_to_Install_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Shipping_Date__c  &gt;  Install_Date__c</errorConditionFormula>
    <errorDisplayField>Shipping_Date__c</errorDisplayField>
    <errorMessage>Shipping date has to come before the install date</errorMessage>
</ValidationRule>