source/objects/Bluescape_Demo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BS_Demo_Name__c</columns>
    <columns>Requester__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Demo_Unit__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Install_Date__c</columns>
    <columns>Shipping_Date__c</columns>
    <columns>Removal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>