source/objects/Bluescape_Demo__c/listViews/All_Events_and_Demo_Units.listView-meta.xml
<ListView>
    <fullName>All_Events_and_Demo_Units</fullName>
    <columns>NAME</columns>
    <columns>BS_Demo_Name__c</columns>
    <columns>Requester__c</columns>
    <columns>Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Demo_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Launch_Call_Date__c</columns>
    <columns>Shipping_Date__c</columns>
    <columns>Install_Date__c</columns>
    <columns>Removal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Events and Demo Units</label>
</ListView>