source/objects/Bluescape_Demo__c/listViews/Completed_Events.listView-meta.xml
<ListView>
    <fullName>Completed_Events</fullName>
    <columns>NAME</columns>
    <columns>BS_Demo_Name__c</columns>
    <columns>Requester__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>CSM__c</columns>
    <columns>SE__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Demo_Unit__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Install_Date__c</columns>
    <columns>Shipping_Date__c</columns>
    <columns>Removal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Events</label>
</ListView>