source/objects/Bluescape_Demo__c/listViews/Upcoming_Events.listView-meta.xml
<ListView>
    <fullName>Upcoming_Events</fullName>
    <columns>NAME</columns>
    <columns>BS_Demo_Name__c</columns>
    <columns>Requester__c</columns>
    <columns>Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Large_Format_Display__c</columns>
    <columns>Launch_Call_Date__c</columns>
    <columns>Install_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Demo_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Install_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Events</label>
</ListView>